# ReferentCOREServer-v2

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  remote_components.json  secrets_vault.json
docs/: nuclear_contract.md
rcs/: engine.py  gateway.py  main.py  settings.py
rcs/electrons/: authenticator.py  base.py  flow_control.py  logger.py  transaction.py
rcs/nucleus/: config.py  connection.py  handshake.py  protocol.py  registry.py  router.py  state.py
rcs/utils/: redis_client.py
